--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,15 @@
           <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#importModal">Import</a>
         </li>
       </ul>
+      <ul class="navbar-nav ms-auto">
+        {% if session.get('user_id') %}
+          <li class="nav-item"><span class="nav-link">Hello, {{ session.get('username') }}</span></li>
+          <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+        {% else %}
+          <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+        {% endif %}
+      </ul>
     </div>
   </div>
 </nav>
