--- a/templates/base.html
+++ b/templates/base.html
@@ -37,13 +37,7 @@
         </li>
       </ul>
       <ul class="navbar-nav ms-auto">
-        {% if session.get('user_id') %}
-          <li class="nav-item"><span class="nav-link">Hello, {{ session.get('username') }}</span></li>
-          <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-        {% else %}
-          <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-          <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-        {% endif %}
+        <!-- User auth links removed -->
       </ul>
     </div>
   </div>
